# src/models/pedidosModel.ts
@@ -8,6 +8,13 @@ export interface Pedidos {
     total: number,
     id_repartidor: number | null
 }
+export interface paginaResult<T> {
+  data: T[];
+  total: number;
+  page: number;
+  limit: number;
+  totalPages: number;
+}
 
 export type CreatePedidoInput = Omit<Pedidos, "id" | "fecha" | "estado" | "id_repartidor">& {id_repartidor?: Pedidos["id_repartidor"]};
 export type UpdatePedidoInput = { estado: string;};
@@ -27,7 +34,7 @@ export const PedidosModel = {
   create: async (dato: CreatePedidoInput): Promise<Pedidos> => {
     const { cliente_id, total, id_repartidor } = dato;
     const query =
-      "INSERT INTO pedidos (cliente_id, fecha, estado, total, id_repartidor) VALUES ($1, CURRENT_TIMESTAMP,'Preparando',$2, $3) RETURNING *;";
+      "INSERT INTO pedidos (cliente_id, fecha, estado, total, id_repartidor) VALUES ($1, CURRENT_DATE,'Pendiente',$2, $3) RETURNING *;";
     const { rows } = await pool.query(query, [
       cliente_id,
       total,
@@ -55,5 +62,61 @@ export const PedidosModel = {
       [id],
     );
     return (rowCount ?? 0) > 0;
+  },
+  findByClienteId: async (cliente_id: number): Promise<Pedidos[]> => {
+    const { rows } = await pool.query<Pedidos>(
+      "SELECT * FROM pedidos WHERE cliente_id = $1 ORDER BY id ASC;",
+      [cliente_id],
+    );
+    return rows;
+  },
+  findWhitFilter: async (
+    page: number = 1,
+    limit: number = 10,
+    search?: string, // where name ILIKE %${search}%
+    estado?: string, // where precio >= ${minPirce}
+  ): Promise<paginaResult<[Pedidos]>> => {
+    const conditions: string[] = [];
+    const values: any[] = [];
+    let paramIndex = 1;
+
+    //la construccion de las condiciones
+    if (search) {
+      conditions.push(`cliente_id <= $${paramIndex}`);
+      paramIndex++;
+      values.push(`%${search}%`);
+    }
+
+    if (estado !== undefined) {
+      conditions.push(`LOWER(estado) = LOWER($${paramIndex})`);
+      paramIndex++;
+      values.push(estado);
+    }
+    // unir las condiciones existentes con AND
+    const whereUnited =
+      conditions.length > 0 ? `WHERE ${conditions.join(` AND `)}` : "";
+    //CONTEO TOTAL de prodcutos q coinciden con los filtros aplicados (en caso de haberlos)
+    const countQuery = `SELECT COUNT(*) FROM pedidos ${whereUnited}`;
+    const countResult = await pool.query(countQuery, values);
+    const total = Number(countResult.rows[0].count);
+    //consulta de datos con limit y offset
+    const offset = (page - 1) * limit;
+    //agregar el limit y offset a los placeholder dinamicos
+    const dataValues = [...values, limit, offset];
+    const dataQuery = `
+    SELECT * FROM pedidos
+    ${whereUnited}
+    ORDER BY id ASC
+    LIMIT $${paramIndex} OFFSET $${paramIndex + 1}
+    `;
+    const { rows } = await pool.query(dataQuery, dataValues);
+
+    return {
+      data: rows,
+      total,
+      page,
+      limit,
+      totalPages: Math.ceil(total / limit) || 1,
+    };
   },
 }
